# openstack-vm-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: flavors.py  images.py  vms.py
app/core/: config.py  exceptions.py
app/schemas/: vm.py
app/services/: openstack_client.py
tests/unit/: test_api.py
